crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unnamed_composite_index_snapshot@unnamed_composite_index_SqlAlchemy.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
from __future__ import annotations


from sqlalchemy import Index, Integer
from sqlalchemy.orm import DeclarativeBase, Mapped, mapped_column


class UnnamedIndex(DeclarativeBase):
    __tablename__ = "unnamed_index"

    id: Mapped[int] = mapped_column(Integer, primary_key=True)
    col_a: Mapped[int] = mapped_column(Integer, nullable=False)
    col_b: Mapped[int] = mapped_column(Integer, nullable=False)

    __table_args__ = (
        Index(None, "col_a", "col_b"),
    )
