crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unnamed_composite_index_snapshot@unnamed_composite_index_SqlModel.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
from __future__ import annotations


from sqlmodel import Field, SQLModel
from sqlalchemy import Index


class UnnamedIndex(SQLModel, table=True):
    __tablename__ = "unnamed_index"

    id: int = Field(primary_key=True)
    col_a: int = Field(...)
    col_b: int = Field(...)

    __table_args__ = (
        Index(None, "col_a", "col_b"),
    )
