crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unnamed_composite_unique_snapshot@unnamed_composite_unique_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class UnnamedUnique(models.Model):
    id = models.IntegerField(primary_key=True)
    col_a = models.IntegerField()
    col_b = models.IntegerField()

    class Meta:
        managed = False
        db_table = "unnamed_unique"
        constraints = [
            models.UniqueConstraint(fields=["col_a", "col_b"], name="uq_unnamed_unique__col_a_col_b"),
        ]
