crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unnamed_composite_unique_snapshot@unnamed_composite_unique_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 197
expression: rendered
---
export const unnamedUnique = pgTable("unnamed_unique", {
  id: integer("id").primaryKey(),
  colA: integer("col_a").notNull(),
  colB: integer("col_b").notNull(),
}, (t) => [
  unique("uq_unnamed_unique__col_a_col_b").on(t.colA, t.colB),
]);
