crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unnamed_composite_unique_snapshot@unnamed_composite_unique_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type UnnamedUnique struct {
	ID   int32 `gorm:"column:id;primaryKey" json:"id"`
	ColA int32 `gorm:"column:col_a;not null;uniqueIndex:uq_unnamed_unique__col_a_col_b" json:"col_a"`
	ColB int32 `gorm:"column:col_b;not null;uniqueIndex:uq_unnamed_unique__col_a_col_b" json:"col_b"`
}

func (UnnamedUnique) TableName() string { return "unnamed_unique" }
