crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unnamed_composite_unique_snapshot@unnamed_composite_unique_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
model UnnamedUnique {
  id Int @id
  col_a Int
  col_b Int

  @@unique([col_a, col_b], map: "uq_unnamed_unique__col_a_col_b")
  @@map("unnamed_unique")
}
