crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unnamed_composite_unique_snapshot@unnamed_composite_unique_SeaOrm.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
use sea_orm::entity::prelude::*;

#[sea_orm::model]
#[derive(Clone, Debug, PartialEq, Eq, DeriveEntityModel)]
#[sea_orm(table_name = "unnamed_unique")]
pub struct Model {
    #[sea_orm(primary_key)]
    pub id: i32,
    pub col_a: i32,
    pub col_b: i32,
}


/// Composite unique constraints — declare in migrations or use Statement builder.
pub const COMPOSITE_UNIQUES: &[&[&str]] = &[
    &["col_a", "col_b"],
];
vespera::schema_type!(Schema from Model, name = "UnnamedUniqueSchema");
impl ActiveModelBehavior for ActiveModel {}
