crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unnamed_composite_unique_snapshot@unnamed_composite_unique_SqlAlchemy.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
from __future__ import annotations


from sqlalchemy import Integer, UniqueConstraint
from sqlalchemy.orm import DeclarativeBase, Mapped, mapped_column


class UnnamedUnique(DeclarativeBase):
    __tablename__ = "unnamed_unique"

    id: Mapped[int] = mapped_column(Integer, primary_key=True)
    col_a: Mapped[int] = mapped_column(Integer, nullable=False)
    col_b: Mapped[int] = mapped_column(Integer, nullable=False)

    __table_args__ = (
        UniqueConstraint("col_a", "col_b"),
    )
