crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unnamed_index_and_unique_snapshot@unnamed_index_and_unique_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 187
expression: rendered
---
export const events = pgTable("events", {
  id: integer("id").primaryKey(),
  venueId: integer("venue_id").notNull(),
  date: date("date").notNull(),
}, (t) => [
  index("ix_events__date_venue_id").on(t.venueId, t.date),
  unique("uq_events__date_venue_id").on(t.venueId, t.date),
]);
